opera no coin citation and comment

--- a/Paper/bib/references.bib
+++ b/Paper/bib/references.bib
@@ -295,3 +295,13 @@ isbn="978-3-319-66332-6"
   year={2010}
 }
 
+
+
+@misc{operanocoin,
+  title={New year, new browser. Opera 50 introduces anti-Bitcoin mining tool},
+  author={opera},
+  year={2018},
+  howpublished = {\url{http://blogs.opera.com/desktop/2018/01/opera-50-introduces-anti-bitcoin-mining-tool/}},
+  note = {Accessed: 2018-01-20},
+}
+
