--- a/Paper/sections/body.tex
+++ b/Paper/sections/body.tex
@@ -212,7 +212,7 @@ In addition to regulation and standardizing, better security design is required 
 
 Surveys with larger sample size and diversity is required to gauge users acceptance. These surveys should answer how much CPU power users are willing to volunteer, and if battery impact would change their affinity for participation.
 
-Browser mining has been shown to not be as efficient as native mining applications today. Therefore, optimizations on how browsers pass system calls to the operating system can be made, or there can even be browsers designed specifically to support efficient browser mining. However, browsers such as Opera, have taken a stance against cryptojacking scripts and blocked them via "NoCoin" blacklist. (Cite: https://blogs.opera.com/desktop/2018/01/opera-50-introduces-anti-bitcoin-mining-tool/)
+Browser mining has been shown to not be as efficient as native mining applications today. Therefore, optimizations on how browsers pass system calls to the operating system can be made, or there can even be browsers designed specifically to support efficient browser mining. However, browsers such as Opera, have taken a stance against cryptojacking scripts and blocked them via "NoCoin" blacklist ~\cite{operanocoin}. The effectiveness of using a blacklist to block such activities is still not clear. %maybe a bit more on this? meaning that as seen so far, cryptojackers can just use new domains/ips to bypass these blacklists
 
 This new model of monetizing websites can be a paradigm shift in how advertisement giants monopolize internet traffic. This could lead to re-democratizing the online advertisement ecosystem to make it fairer for smaller players.
 
