apply some other modifications by Troy

--- a/Paper/bib/references.bib
+++ b/Paper/bib/references.bib
@@ -305,3 +305,19 @@ isbn="978-3-319-66332-6"
   note = {Accessed: 2018-01-20},
 }
 
+
+@misc{registershowtime,
+  title={CBS's Showtime caught mining crypto-coins in viewers' web browsers},
+  author={theregister},
+  year={2017},
+  howpublished = {\url{https://www.theregister.co.uk/2017/09/25/showtime_hit_with_coinmining_script/}},
+  note = {Accessed: 2018-01-20},
+}
+
+@misc{njcourtbitcoinjsminer,
+  title={New Jersey Division of Consumer Affairs Obtains Settlement with Developer of Bitcoin-Mining Software Found to Have Accessed New Jersey Computers Without Users Knowledge or Consent},
+  author={New Jersey Division of Consumer Affairs},
+  year={2015},
+  howpublished = {\url{http://nj.gov/oag/newsreleases15/pr20150526b.html}},
+  note = {Accessed: 2018-01-20},
+}
