--- a/Paper/sections/abstract.tex
+++ b/Paper/sections/abstract.tex
@@ -7,5 +7,5 @@ In this paper, we examine the recent trend toward in-browser mining of cryptocur
 \end{abstract}
 
 \begin{IEEEkeywords}
-Cryptocurrency; Monero; CoinHive; mining; Bitcoin; blockchain
+Cryptocurrency; Monero; CoinHive; mining; Bitcoin; blockchain, cryptojack
 \end{IEEEkeywords}
