--- a/Paper/main.tex
+++ b/Paper/main.tex
@@ -13,7 +13,7 @@
 
 
 \begin{document}
-\title{A first look at cryptojacking}
+\title{A first look at browser-based cryptojacking}
 \author{}
 \maketitle
 
