--- a/Paper/sections/body.tex
+++ b/Paper/sections/body.tex
@@ -4,18 +4,21 @@
 
 \section{Introduction}
 
-Bitcoin~\cite{nakamoto2008bitcoin} emerged almost a decade ago as an open source project, which mushroomed into a cryptocurrency sector collectively capitalized at over \$500 billion USD as of this paper's writing\footnote{Coinmarketcap - Global Charts - Accessed: 2017-12-14 \url{https://coinmarketcap.com/}}. Every day, people new to the concept of cryptocurrencies look for a quick and simple way to acquire some crypto-wealth. In the early days of Bitcoin, users could acquire the currency through mining---a process Bitcoin uses to incentive nodes to verify transactions as they are recoded in the blockchain---on their personal computers. The second wave of mining saw users augmenting the CPU power of their computers with GPUs. Other groups of people deployed snippets of JavaScript code on websites that recruited their visitor's€™ CPU power, often unknowingly, to mine for them as part of a bigger mining network (\ie a mining pool). However, both approaches quickly became infeasible as the computing power required to mine bitcoins grew exponentially to over 12 petahashes ~\footnote{Bitcoin hash rate - Accessed: 2017-11-20\url{https://blockchain.info/charts/hash-rate}}. This was due to the emergence of application-specific integrated circuits (ASICs) and collective mining pools, which continue the third wave of mining to this day. As the years passed and a few key cryptocurrencies emerged as the market leaders, the concept of browser mining largely became forgotten. Today, the most common way for the average person to acquire cryptocurrencies is to purchase them. It came as a surprise to many when stories began to circulate on popular media outlets this year about websites mining cryptocurrencies through browsers again. And even more intriguingly, high profile websites were now involved, and the practice seemed to be growing at a quick pace.
+Bitcoin~\cite{nakamoto2008bitcoin} emerged almost a decade ago as an open source project, which mushroomed into a cryptocurrency sector collectively capitalized at over \$500 billion USD as of this paper's writing\footnote{Coinmarketcap - Global Charts - Accessed: 2017-12-14 \url{https://coinmarketcap.com/}}. Every day, people new to the concept of cryptocurrencies look for a quick and simple way to acquire some crypto-wealth. In the early days of Bitcoin, users could acquire the currency through mining---a process Bitcoin uses to incentive nodes to verify transactions as they are recoded in the blockchain---on their personal computers. The second wave of mining saw users augmenting the CPU power of their computers with GPUs. Other groups of people deployed snippets of JavaScript code on websites that recruited their visitor's€™ CPU power, often unknowingly, to mine for them as part of a bigger mining network (\ie a mining pool). However, both approaches quickly became infeasible as the computing power required to mine bitcoins grew exponentially to over 12 petahashes ~\footnote{Bitcoin hash rate - Accessed: 2017-11-20\url{https://blockchain.info/charts/hash-rate}}. This was due to the emergence of application-specific integrated circuits (ASICs) and collective mining pools, which continue the third wave of mining to this day. As the years passed and a few key cryptocurrencies emerged as the market leaders, the concept of browser mining largely became forgotten. Today, the most common way for the average person to acquire cryptocurrencies is to purchase them. I
+
+t came as a surprise to many when stories began to circulate on popular media outlets this year about websites mining cryptocurrencies through browsers again. Figure~\ref{fig:interest} shows how the searches for ``browser mining'' have changed since Bitcoin was launched. Websites like ThePirateBay.org ~\cite{piratesbayhive} experimented with browser mining as a way to add a new revenue stream, while others like Showtime.com ~\cite{showtimehive} claimed they had the code injected after they were discovered. 
+
+The term cryptojacking (also known as coinjacking and drive-by mining) was coined to refer to the stealth use of user's resources (e.g. CPU) in the background to mine cryptocurrencies. This paper is focused on in-browser mining, a subset of cryptojacking, in which instead of an application or a malware, the process of mining, commonly written in Javascript, happens within the user's browser by visiting a website. The resources consumption could be really high to noticeably effect users' computer performance and even electricity bill. Users' consent is where makes cryptojacking different than regular mining software. The use of malware to directly install mining software or indirectly enable botnet access 
+
 
 \begin{figure}[t]
 \centering
 \includegraphics[width=\linewidth]{figures/browser_mining.png}
-\caption{Search interest for ``browser mining'' over time.\label{fig:interest}}
+\caption{Search interest for ``browser mining'' over time. Search interest seems to have piqued during price surges, which culminated with Bitcoin crossing \$1000 USD for the first time in December 2013. Soon after Bitcoin's first major crash searches consistently waned until a recent large spike, which is more than 4 times the lifetime average. The waning period before the recent surge could be attributed to the advent of ASIC usage for Bitcoin mining, and the surge is likely due to the revival of browser mining for non-Bitcoin currencies that have gained a sizeable market capitalization.\label{fig:interest}}
 \end{figure}
 
-The graph above shows how the searches for ``browser mining'' have changed since Bitcoin was launched. Search interest seems to have piqued during price surges, which culminated with Bitcoin crossing \$1000 USD for the first time in December 2013. Soon after Bitcoin`s first major crash searches consistently waned until a recent large spike, which is more than 4 times the lifetime average. The waning period before the recent surge could be attributed to the advent of ASIC usage for Bitcoin mining, and the surge is likely due to the revival of browser mining for non-Bitcoin currencies that have gained a sizeable market capitalization. As a result, websites like ThePirateBay.org ~\cite{piratesbayhive} experimented with browser mining as a way to add a new revenue stream, while others like Showtime.com ~\cite{showtimehive} claimed they had the code injected after they were discovered.
 
 
-Cryptojacking\footnote{Also known as Coinjacking, Drive-by mining} , is defined as stealth use of user's resources (e.g. CPU) in the background to mine cryptocurrencies. This paper is focused on in-browser mining, a category of Cryptojacking in which instead of an application or a malware, the process of mining, commonly written in Javascript, happens within the user`s browser by visiting a website. The resources consumption could be really high to noticeably effect users` computer performance and even electricity bill. Users` consent is where makes cryptojacking different than regular mining software.
 
 
 
