--- a/Paper/bib/references.bib
+++ b/Paper/bib/references.bib
@@ -1,155 +1,140 @@
-@misc{nakamoto2008bitcoin,
-  title={Bitcoin: A peer-to-peer electronic cash system},
-  author={Nakamoto, Satoshi},
-  year={2008}
-}
+%% This BibTeX bibliography file was created using BibDesk.
+%% http://bibdesk.sourceforge.net/
 
+%% Created for Jeremy Clark at 2018-01-22 09:59:22 -0500 
+
+
+%% Saved with string encoding Unicode (UTF-8) 
+
+
+
+@book{narayanan2016,
+	Author = {Narayanan, Arvind and Bonneau, Joseph and Felten, Edward and Miller, Andrew and Goldfeder, Steven},
+	Date-Added = {2018-01-22 14:59:21 +0000},
+	Date-Modified = {2018-01-22 14:59:21 +0000},
+	Publisher = {Princeton University Press},
+	Title = {Bitcoin and Cryptocurrency Technologies: A Comprehensive Introduction},
+	Year = {2016}}
+
+@misc{nakamoto2008bitcoin,
+	Author = {Nakamoto, Satoshi},
+	Title = {Bitcoin: A peer-to-peer electronic cash system},
+	Year = {2008}}
 
 @misc{monero,
-  title = {{MONERO} Private Digital Currency},
- author = {Monero},
-  howpublished = {\url{https://getmonero.org/}},
-  note = {Accessed: 2017-11-20},
-  year={2014}
-}
-
+	Author = {Monero},
+	Howpublished = {\url{https://getmonero.org/}},
+	Note = {Accessed: 2017-11-20},
+	Title = {{MONERO} Private Digital Currency},
+	Year = {2014}}
 
 @misc{coinhive,
-  title = {{Coinhive} Monetize Your Business With Your Users CPU Power},
- author = {Coinhive},
-  howpublished = {\url{https://coinhive.com/}},
-  note = {Accessed: 2017-11-20},
-  year={2017}
-}
-
+	Author = {Coinhive},
+	Howpublished = {\url{https://coinhive.com/}},
+	Note = {Accessed: 2017-11-20},
+	Title = {{Coinhive} Monetize Your Business With Your Users CPU Power},
+	Year = {2017}}
 
 @misc{showtimehive,
-  title = {Showtime websites secretly mined user CPU for cryptocurrency},
- author = {TheVerge},
-  howpublished = {\url{https://www.theverge.com/2017/9/26/16367620/showtime-cpu-cryptocurrency-monero-coinhive}},
-  note = {Accessed: 2017-11-20},
-  year={2017}
-}
-
+	Author = {TheVerge},
+	Howpublished = {\url{https://www.theverge.com/2017/9/26/16367620/showtime-cpu-cryptocurrency-monero-coinhive}},
+	Note = {Accessed: 2017-11-20},
+	Title = {Showtime websites secretly mined user CPU for cryptocurrency},
+	Year = {2017}}
 
 @misc{vergeadinjection,
-  title = {Hotel caught injecting advertising into webpages on complimentary Wi-Fi network},
- author = {TheVerge},
-  howpublished = {\url{https://www.theverge.com/2012/4/7/2931600/hotel-caught-injecting-advertising-into-web-pages-on-complimentary-wi}},
-  note = {Accessed: 2017-12-08},
-  year={2012}
-}
-
+	Author = {TheVerge},
+	Howpublished = {\url{https://www.theverge.com/2012/4/7/2931600/hotel-caught-injecting-advertising-into-web-pages-on-complimentary-wi}},
+	Note = {Accessed: 2017-12-08},
+	Title = {Hotel caught injecting advertising into webpages on complimentary Wi-Fi network},
+	Year = {2012}}
 
 @misc{bleepingcomputerminers,
-  title = {The Internet Is Ride with In-Browser Miners and It is Getting Worse Each Day},
- author = {BleepingComputer},
-  howpublished = {\url{https://www.bleepingcomputer.com/news/security/the-internet-is-rife-with-in-browser-miners-and-its-getting-worse-each-day/}},
-  note = {Accessed: 2017-12-08},
-  year={2012}
-}
-
-
+	Author = {BleepingComputer},
+	Howpublished = {\url{https://www.bleepingcomputer.com/news/security/the-internet-is-rife-with-in-browser-miners-and-its-getting-worse-each-day/}},
+	Note = {Accessed: 2017-12-08},
+	Title = {The Internet Is Ride with In-Browser Miners and It is Getting Worse Each Day},
+	Year = {2012}}
 
 @misc{piratesbayhive,
-  title = {Browser-Based Mining Malware Found on Pirate Bay, Others},
- author = {ExtremeTech},
-  howpublished = {\url{https://www.extremetech.com/internet/255971-browser-based-cryptocurrency-malware-appears-online-pirate-bay}},
-  note = {Accessed: 2017-11-20},
-  year={2017}
-}
+	Author = {ExtremeTech},
+	Howpublished = {\url{https://www.extremetech.com/internet/255971-browser-based-cryptocurrency-malware-appears-online-pirate-bay}},
+	Note = {Accessed: 2017-11-20},
+	Title = {Browser-Based Mining Malware Found on Pirate Bay, Others},
+	Year = {2017}}
 
 @misc{piratesbayblog,
-  title = {The galaxys most resilient bittorrent site},
- author = {ThePirateBay},
-  howpublished = {\url{https://thepiratebay.org/blog/242}},
-  note = {Accessed: 2017-11-20},
-  year={2017}
-}
-
+	Author = {ThePirateBay},
+	Howpublished = {\url{https://thepiratebay.org/blog/242}},
+	Note = {Accessed: 2017-11-20},
+	Title = {The galaxys most resilient bittorrent site},
+	Year = {2017}}
 
 @misc{cryptoknight,
-  title = {CryptoNote Technology},
- author = {Cryptonote},
-  howpublished = {\url{https://cryptonote.org/inside.php#equal-proof-of-work}},
-  note = {Accessed: 2017-11-20},
-  year={2017}
-}
-
+	Author = {Cryptonote},
+	Howpublished = {\url{https://cryptonote.org/inside.php#equal-proof-of-work}},
+	Note = {Accessed: 2017-11-20},
+	Title = {CryptoNote Technology},
+	Year = {2017}}
 
 @misc{gaurdianelectricity,
-  title = {Ads dont work so websites are using your electricity to pay the bills},
- author = {TheGuardian},
-  howpublished = {\url{https://www.theguardian.com/technology/2017/sep/27/pirate-bay-showtime-ads-websites-electricity-pay-bills-cryptocurrency-bitcoin}},
-  note = {Accessed: 2017-11-20},
-  year={2017}
-}
-
+	Author = {TheGuardian},
+	Howpublished = {\url{https://www.theguardian.com/technology/2017/sep/27/pirate-bay-showtime-ads-websites-electricity-pay-bills-cryptocurrency-bitcoin}},
+	Note = {Accessed: 2017-11-20},
+	Title = {Ads dont work so websites are using your electricity to pay the bills},
+	Year = {2017}}
 
 @misc{chatsupporthack,
-  title = {Security incident Nov 23rd, 2017},
- author = {LiveHelpNow},
-  howpublished = {\url{https://blog.livehelpnow.net/security-incident-nov-23rd-2017/}},
-  note = {Accessed: 2017-12-14},
-  year={2017}
-}
-
+	Author = {LiveHelpNow},
+	Howpublished = {\url{https://blog.livehelpnow.net/security-incident-nov-23rd-2017/}},
+	Note = {Accessed: 2017-12-14},
+	Title = {Security incident Nov 23rd, 2017},
+	Year = {2017}}
 
 @misc{van2013cryptonote,
-  title={Cryptonote v 2. 0},
-  author={van Saberhagen, Nicolas},
-  year={2013},
-  howpublished = {\url{https://bytecoin.org/old/whitepaper.pdf}},
-}
-
+	Author = {van Saberhagen, Nicolas},
+	Howpublished = {\url{https://bytecoin.org/old/whitepaper.pdf}},
+	Title = {Cryptonote v 2. 0},
+	Year = {2013}}
 
 @misc{registerufcmonero,
-  title={Lets get ready to grumble! UFC secretly choke slams browsers with Monero miners},
-  author={TheRegister},
-  year={2017},
-  howpublished = {\url{https://www.theregister.co.uk/2017/11/07/ufc_coin_hive/}},
-}
+	Author = {TheRegister},
+	Howpublished = {\url{https://www.theregister.co.uk/2017/11/07/ufc_coin_hive/}},
+	Title = {Lets get ready to grumble! UFC secretly choke slams browsers with Monero miners},
+	Year = {2017}}
 
 @misc{eucookie,
-  title={Cookies},
-  author={European-Commission},
-  year={2011},
-  howpublished = {\url{http://ec.europa.eu/ipg/basics/legal/cookies/index_en.htm}},
-  note = {Accessed: 2017-12-08},
-}
+	Author = {European-Commission},
+	Howpublished = {\url{http://ec.europa.eu/ipg/basics/legal/cookies/index_en.htm}},
+	Note = {Accessed: 2017-12-08},
+	Title = {Cookies},
+	Year = {2011}}
 
 @misc{coinhivecopycats,
-  title={Coinhive Hacked and Launches New Opt-In Service},
-  author={DeepDotWeb},
-  year={2017},
-  howpublished = {\url{https://www.deepdotweb.com/2017/11/11/coinhive-hacked-launches-new-opt-service/}}
-}
-
+	Author = {DeepDotWeb},
+	Howpublished = {\url{https://www.deepdotweb.com/2017/11/11/coinhive-hacked-launches-new-opt-service/}},
+	Title = {Coinhive Hacked and Launches New Opt-In Service},
+	Year = {2017}}
 
 @misc{checkpoint,
-  title={October’s Most Wanted Malware: Cryptocurrency Mining Presents New Threat},
-  author={CheckPointResearchTeam},
-  year={2017},
-  howpublished = {\url{https://blog.checkpoint.com/2017/11/13/octobers-wanted-malware-cryptocurrency-mining-presents-new-threat/}}
-}
-
+	Author = {CheckPointResearchTeam},
+	Howpublished = {\url{https://blog.checkpoint.com/2017/11/13/octobers-wanted-malware-cryptocurrency-mining-presents-new-threat/}},
+	Title = {October's Most Wanted Malware: Cryptocurrency Mining Presents New Threat},
+	Year = {2017}}
 
 @misc{bbcmintcrypto,
-  title={Websites hacked to mint crypto-cash},
-  author={BBC},
-  year={2017},
-  howpublished = {\url{http://www.bbc.com/news/technology-41518351}}
-}
+	Author = {BBC},
+	Howpublished = {\url{http://www.bbc.com/news/technology-41518351}},
+	Title = {Websites hacked to mint crypto-cash},
+	Year = {2017}}
 
-
- @InProceedings{censys15,
-        author = {Zakir Durumeric and David Adrian and Ariana Mirian and Michael Bailey and J. Alex Halderman},
-        title = {A Search Engine Backed by {I}nternet-Wide Scanning},
-        booktitle = {Proceedings of the 22nd ACM Conference on Computer and Communications Security},
-        month = oct,
-        year = 2015
-    }
-
+@inproceedings{censys15,
+	Author = {Zakir Durumeric and David Adrian and Ariana Mirian and Michael Bailey and J. Alex Halderman},
+	Booktitle = {ACM CCS},
+	Date-Modified = {2018-01-22 14:56:37 +0000},
+	Month = oct,
+	Title = {A Search Engine Backed by {I}nternet-Wide Scanning},
+	Year = 2015}
 
 @inproceedings{SHB11,
 	Author = {A Sotirakopoulos and K. Hawkey and K. Beznosov},
@@ -158,8 +143,7 @@
 	Date-Modified = {2012-10-12 11:47:17 -0400},
 	Title = {On the Challenges in Usable Security Lab Studies: Lessons Learned from Replicating a Study on {SSL} Warnings},
 	Year = {2011}}
-	
-	
+
 @inproceedings{SEAAC09,
 	Author = {J. Sunshine and S. Egelman and H. Almuhimedi and N. Atri and L. F. Cranor},
 	Booktitle = {USENIX Security},
@@ -169,155 +153,114 @@
 	Year = {2009}}
 
 @article{king2007internet,
-  title={Internet advertising and the generalized second-price auction: Selling billions of dollars worth of keywords},
-  author={King, Mervyn and Atkins, Jill and Schwarz, Michael},
-  journal={The American economic review},
-  volume={97},
-  number={1},
-  pages={242--259},
-  year={2007},
-  publisher={American Economic Association}
-}
+	Author = {King, Mervyn and Atkins, Jill and Schwarz, Michael},
+	Journal = {The American economic review},
+	Number = {1},
+	Pages = {242--259},
+	Publisher = {American Economic Association},
+	Title = {Internet advertising and the generalized second-price auction: Selling billions of dollars worth of keywords},
+	Volume = {97},
+	Year = {2007}}
 
 @article{moor1985computer,
-  title={What is computer ethics?},
-  author={Moor, James H},
-  journal={Metaphilosophy},
-  volume={16},
-  number={4},
-  pages={266--275},
-  year={1985},
-  publisher={Wiley Online Library}
-}
+	Author = {Moor, James H},
+	Journal = {Metaphilosophy},
+	Number = {4},
+	Pages = {266--275},
+	Publisher = {Wiley Online Library},
+	Title = {What is computer ethics?},
+	Volume = {16},
+	Year = {1985}}
 
-
-@InProceedings{MiningonSOeDime2017,
-author="Tahir, Rashid
-and Huzaifa, Muhammad
-and Das, Anupam
-and Ahmad, Mohammad
-and Gunter, Carl
-and Zaffar, Fareed
-and Caesar, Matthew
-and Borisov, Nikita",
-editor="Dacier, Marc
-and Bailey, Michael
-and Polychronakis, Michalis
-and Antonakakis, Manos",
-title="Mining on Someone Else's Dime: Mitigating Covert Mining Operations in Clouds and Enterprises",
-booktitle="Research in Attacks, Intrusions, and Defenses",
-year="2017",
-publisher="Springer International Publishing",
-address="Cham",
-pages="287--310",
-abstract="Covert cryptocurrency mining operations are causing notable losses to both cloud providers and enterprises. Increased power consumption resulting from constant CPU and GPU usage from mining, inflated cooling and electricity costs, and wastage of resources that could otherwise benefit legitimate users are some of the factors that contribute to these incurred losses. Affected organizations currently have no way of detecting these covert, and at times illegal miners and often discover the abuse when attackers have already fled and the damage is done.",
-isbn="978-3-319-66332-6"
-}
+@inproceedings{MiningonSOeDime2017,
+	Abstract = {Covert cryptocurrency mining operations are causing notable losses to both cloud providers and enterprises. Increased power consumption resulting from constant CPU and GPU usage from mining, inflated cooling and electricity costs, and wastage of resources that could otherwise benefit legitimate users are some of the factors that contribute to these incurred losses. Affected organizations currently have no way of detecting these covert, and at times illegal miners and often discover the abuse when attackers have already fled and the damage is done.},
+	Author = {Tahir, Rashid and Huzaifa, Muhammad and Das, Anupam and Ahmad, Mohammad and Gunter, Carl and Zaffar, Fareed and Caesar, Matthew and Borisov, Nikita},
+	Booktitle = {RAID},
+	Date-Modified = {2018-01-22 14:56:28 +0000},
+	Isbn = {978-3-319-66332-6},
+	Title = {Mining on Someone Else's Dime: Mitigating Covert Mining Operations in Clouds and Enterprises},
+	Year = {2017}}
 
 @article{wyke2012zeroaccess,
-  title={The zeroaccess botnet: Mining and fraud for massive financial gain},
-  author={Wyke, James},
-  journal={Sophos Technical Paper},
-  year={2012}
-}
+	Author = {Wyke, James},
+	Journal = {Sophos Technical Paper},
+	Title = {The zeroaccess botnet: Mining and fraud for massive financial gain},
+	Year = {2012}}
 
 @inproceedings{huang2014botcoin,
-  title={Botcoin: Monetizing Stolen Cycles.},
-  author={Huang, Danny Yuxing and Dharmdasani, Hitesh and Meiklejohn, Sarah and Dave, Vacha and Grier, Chris and McCoy, Damon and Savage, Stefan and Weaver, Nicholas and Snoeren, Alex C and Levchenko, Kirill},
-  booktitle={NDSS},
-  year={2014}
-}
-
-
+	Author = {Huang, Danny Yuxing and Dharmdasani, Hitesh and Meiklejohn, Sarah and Dave, Vacha and Grier, Chris and McCoy, Damon and Savage, Stefan and Weaver, Nicholas and Snoeren, Alex C and Levchenko, Kirill},
+	Booktitle = {NDSS},
+	Title = {Botcoin: Monetizing Stolen Cycles.},
+	Year = {2014}}
 
 @misc{bitcoinhistory,
-  title={Important milestones of the Bitcoin project},
-  author={VA - Wikipedia},
-  year={2009},
-  howpublished = {\url{https://en.bitcoin.it/wiki/Category:History}},
-  note = {Accessed: 2018-01-18},
-}
-
-
+	Author = {VA - Wikipedia},
+	Howpublished = {\url{https://en.bitcoin.it/wiki/Category:History}},
+	Note = {Accessed: 2018-01-18},
+	Title = {Important milestones of the Bitcoin project},
+	Year = {2009}}
 
 @misc{coinhiveonchildporn,
-  title={Massive child porn site is hiding in plain sight, and the owners behind it},
-  author={Sijmen Ruwhof},
-  year={2017},
-  howpublished = {\url{https://sijmen.ruwhof.net/weblog/1782-massive-child-porn-site-is-hiding-in-plain-sight-and-the-owners-behind-it}},
-  note = {Accessed: 2018-01-20},
-}
-
+	Author = {Sijmen Ruwhof},
+	Howpublished = {\url{https://sijmen.ruwhof.net/weblog/1782-massive-child-porn-site-is-hiding-in-plain-sight-and-the-owners-behind-it}},
+	Note = {Accessed: 2018-01-20},
+	Title = {Massive child porn site is hiding in plain sight, and the owners behind it},
+	Year = {2017}}
 
 @misc{politifactcoinhive,
-  title={Hackers have turned Politifact’s website into a trap for your PC},
-  author={Washingtonpost},
-  year={2017},
-  howpublished = {\url{https://www.washingtonpost.com/news/the-switch/wp/2017/10/13/hackers-have-turned-politifacts-website-into-a-trap-for-your-pc}},
-  note = {Accessed: 2018-01-20},
-}
-
+	Author = {Washingtonpost},
+	Howpublished = {\url{https://www.washingtonpost.com/news/the-switch/wp/2017/10/13/hackers-have-turned-politifacts-website-into-a-trap-for-your-pc}},
+	Note = {Accessed: 2018-01-20},
+	Title = {Hackers have turned Politifact's website into a trap for your PC},
+	Year = {2017}}
 
 @misc{politifactcoinhivewsj,
-  title={Your Computer May Be Making Bitcoin​ for Hackers},
-  author={WallStreetJournal},
-  year={2017},
-  howpublished = {\url{https://www.wsj.com/articles/hackers-latest-move-using-your-computer-to-mine-bitcoin-1509102002}},
-  note = {Accessed: 2018-01-20},
-}
-
-
+	Author = {WallStreetJournal},
+	Howpublished = {\url{https://www.wsj.com/articles/hackers-latest-move-using-your-computer-to-mine-bitcoin-1509102002}},
+	Note = {Accessed: 2018-01-20},
+	Title = {Your Computer May Be Making Bitcoin​ for Hackers},
+	Year = {2017}}
 
 @misc{googletagcoinhive,
-  title={Crypto-jackers enlist Google Tag Manager to smuggle alt-coin miners},
-  author={theRegister},
-  year={2017},
-  howpublished = {\url{https://www.theregister.co.uk/2017/11/22/cryptojackers_google_tag_manager_coin_hive/}},
-  note = {Accessed: 2018-01-20},
-}
-
+	Author = {theRegister},
+	Howpublished = {\url{https://www.theregister.co.uk/2017/11/22/cryptojackers_google_tag_manager_coin_hive/}},
+	Note = {Accessed: 2018-01-20},
+	Title = {Crypto-jackers enlist Google Tag Manager to smuggle alt-coin miners},
+	Year = {2017}}
 
 @misc{chromeextentioncoinhive,
-  title={Popular Google Chrome Extension Caught Mining Cryptocurrency on Thousands of Computers},
-  author={fortune},
-  year={2017},
-  howpublished = {\url{http://fortune.com/2018/01/02/google-chrome-extension-cryptocurrency-mining-monero/}},
-  note = {Accessed: 2018-01-20},
-}
+	Author = {fortune},
+	Howpublished = {\url{http://fortune.com/2018/01/02/google-chrome-extension-cryptocurrency-mining-monero/}},
+	Note = {Accessed: 2018-01-20},
+	Title = {Popular Google Chrome Extension Caught Mining Cryptocurrency on Thousands of Computers},
+	Year = {2017}}
 
-
-@article{rydstedt2010busting,
-  title={Busting frame busting: a study of clickjacking vulnerabilities at popular sites},
-  author={Rydstedt, Gustav and Bursztein, Elie and Boneh, Dan and Jackson, Collin},
-  journal={IEEE Oakland Web},
-  volume={2},
-  number={6},
-  year={2010}
-}
-
-
+@inproceedings{rydstedt2010busting,
+	Author = {Rydstedt, Gustav and Bursztein, Elie and Boneh, Dan and Jackson, Collin},
+	Booktitle = {IEEE SSP},
+	Date-Modified = {2018-01-22 14:56:47 +0000},
+	Number = {6},
+	Title = {Busting frame busting: a study of clickjacking vulnerabilities at popular sites},
+	Volume = {2},
+	Year = {2010}}
 
 @misc{operanocoin,
-  title={New year, new browser. Opera 50 introduces anti-Bitcoin mining tool},
-  author={opera},
-  year={2018},
-  howpublished = {\url{http://blogs.opera.com/desktop/2018/01/opera-50-introduces-anti-bitcoin-mining-tool/}},
-  note = {Accessed: 2018-01-20},
-}
-
+	Author = {opera},
+	Howpublished = {\url{http://blogs.opera.com/desktop/2018/01/opera-50-introduces-anti-bitcoin-mining-tool/}},
+	Note = {Accessed: 2018-01-20},
+	Title = {New year, new browser. Opera 50 introduces anti-Bitcoin mining tool},
+	Year = {2018}}
 
 @misc{registershowtime,
-  title={CBS's Showtime caught mining crypto-coins in viewers' web browsers},
-  author={theregister},
-  year={2017},
-  howpublished = {\url{https://www.theregister.co.uk/2017/09/25/showtime_hit_with_coinmining_script/}},
-  note = {Accessed: 2018-01-20},
-}
+	Author = {theregister},
+	Howpublished = {\url{https://www.theregister.co.uk/2017/09/25/showtime_hit_with_coinmining_script/}},
+	Note = {Accessed: 2018-01-20},
+	Title = {CBS's Showtime caught mining crypto-coins in viewers' web browsers},
+	Year = {2017}}
 
 @misc{njcourtbitcoinjsminer,
-  title={New Jersey Division of Consumer Affairs Obtains Settlement with Developer of Bitcoin-Mining Software Found to Have Accessed New Jersey Computers Without Users Knowledge or Consent},
-  author={New Jersey Division of Consumer Affairs},
-  year={2015},
-  howpublished = {\url{http://nj.gov/oag/newsreleases15/pr20150526b.html}},
-  note = {Accessed: 2018-01-20},
-}
+	Author = {New Jersey Division of Consumer Affairs},
+	Howpublished = {\url{http://nj.gov/oag/newsreleases15/pr20150526b.html}},
+	Note = {Accessed: 2018-01-20},
+	Title = {New Jersey Division of Consumer Affairs Obtains Settlement with Developer of Bitcoin-Mining Software Found to Have Accessed New Jersey Computers Without Users Knowledge or Consent},
+	Year = {2015}}
