--- a/Paper/sections/body.tex
+++ b/Paper/sections/body.tex
@@ -4,18 +4,18 @@
 
 \section{Introduction}
 
-Bitcoin~\cite{nakamoto2008bitcoin} emerged almost a decade ago as an open source project, which mushroomed into a cryptocurrency sector collectively capitalized at over \$500 billion USD as of this paper's writing\footnote{Coinmarketcap - Global Charts - Accessed: 2017-12-14 \url{https://coinmarketcap.com/}}. Every day, people new to the concept of cryptocurrencies look for a quick and simple way to acquire some crypto-wealth. In the early days of Bitcoin, users could acquire the currency through mining---a process Bitcoin uses to incentive nodes to verify transactions as they are recoded in the blockchain---on their personal computers. The second wave of mining saw users augmenting the CPU power of their computers with GPUs. Other groups of people deployed snippets of JavaScript code on websites that recruited their visitor's€™ CPU power, often unknowingly, to mine for them as part of a bigger mining network (\ie a mining pool). However, both approaches quickly became infeasible as the computing power required to mine bitcoins grew exponentially to over 12 petahashes ~\footnote{Bitcoin hash rate - Accessed: 2017-11-20\url{https://blockchain.info/charts/hash-rate}}. This was due to the emergence of application-specific integrated circuits (ASICs) and collective mining pools, which continue the third wave of mining to this day. As the years passed and a few key cryptocurrencies emerged as the market leaders, the concept of browser mining largely became forgotten. Today, the most common way for the average person to acquire cryptocurrencies is to purchase them. I
-
-t came as a surprise to many when stories began to circulate on popular media outlets this year about websites mining cryptocurrencies through browsers again. Figure~\ref{fig:interest} shows how the searches for ``browser mining'' have changed since Bitcoin was launched. Websites like ThePirateBay.org ~\cite{piratesbayhive} experimented with browser mining as a way to add a new revenue stream, while others like Showtime.com ~\cite{showtimehive} claimed they had the code injected after they were discovered. 
-
-The term cryptojacking (also known as coinjacking and drive-by mining) was coined to refer to the stealth use of user's resources (e.g. CPU) in the background to mine cryptocurrencies. This paper is focused on in-browser mining, a subset of cryptojacking, in which instead of an application or a malware, the process of mining, commonly written in Javascript, happens within the user's browser by visiting a website. The resources consumption could be really high to noticeably effect users' computer performance and even electricity bill. Users' consent is where makes cryptojacking different than regular mining software. The use of malware to directly install mining software or indirectly enable botnet access 
-
+Bitcoin~\cite{nakamoto2008bitcoin} emerged almost a decade ago as an open source project, which mushroomed into a cryptocurrency sector collectively capitalized at over \$500 billion USD.\footnote{As of writing: Coinmarketcap - Global Charts - Accessed: 2017-12-14 \url{https://coinmarketcap.com/}} Every day, people new to the concept of cryptocurrencies look for a quick and simple way to acquire some crypto-wealth. In the early days of Bitcoin, users on their personal computers could effortlessly acquire the currency through mining---a process Bitcoin uses to incentive nodes to verify transactions as they are recoded in the blockchain. However, a second wave of mining technology saw users augmenting the CPU power of their computers with GPUs. Other groups of people deployed snippets of JavaScript code on websites that recruited their visitor's€™ CPU power, often unknowingly, to mine for them as part of a bigger mining network (\ie a mining pool). However, both approaches quickly became infeasible as the computing power required to mine bitcoins grew exponentially to over 12 petahashes.\footnote{Bitcoin hash rate - Accessed: 2017-11-20\url{https://blockchain.info/charts/hash-rate}} This was due to the emergence of application-specific integrated circuits (ASICs) and collective mining pools, which continue the third wave of mining to this day~\cite{narayanan2016}. 
 
 \begin{figure}[t]
 \centering
-\includegraphics[width=\linewidth]{figures/browser_mining.png}
+\includegraphics[width=0.9\linewidth]{figures/browser_mining.png}
 \caption{Search interest for ``browser mining'' over time. Search interest seems to have piqued during price surges, which culminated with Bitcoin crossing \$1000 USD for the first time in December 2013. Soon after Bitcoin's first major crash searches consistently waned until a recent large spike, which is more than 4 times the lifetime average. The waning period before the recent surge could be attributed to the advent of ASIC usage for Bitcoin mining, and the surge is likely due to the revival of browser mining for non-Bitcoin currencies that have gained a sizeable market capitalization.\label{fig:interest}}
 \end{figure}
+
+As the years passed and a few key cryptocurrencies emerged as the market leaders, the concept of browser mining largely became forgotten. Today, the most common way for the average person to acquire cryptocurrencies is to purchase them. It came as a surprise to many when stories began to circulate on popular media outlets this year about websites mining cryptocurrencies through browsers again. Figure~\ref{fig:interest} shows how the searches for ``browser mining'' have changed since Bitcoin was launched. Websites like ThePirateBay.org ~\cite{piratesbayhive} experimented with browser mining as a way to add a new revenue stream, while others like Showtime.com ~\cite{showtimehive} claimed they had the code injected after they were discovered. 
+
+This paper tells the story behind the rejuvenation of browser-based mining. It is centred on \textit{cryptojacking} (also known as coinjacking and drive-by mining), a term coined to refer to the invisible use of a vulnerable user's computational resources to mine cyptocurrencies. Technically in-browser mining is a subset of cryptojacking, although most uses of the term apply to browser-based mining. In this case, mining happens within the client browser when the user visits the website. We have also seen the term cryptojacking applied to malware that mines cryptocurrencies, or to the situation where malware renders a machine as an unwitting participant in a botnet and the botnet is rented for the pursposes of mining crypcurrencies (\cf~\cite{huang2014botcoin}). The resource consumption of in-browser cryptojacking can noticeably degrade a computer's performance.
+
 
 
 
@@ -32,7 +32,7 @@ The term cryptojacking (also known as coinjacking and drive-by mining) was coine
 \subsection{Browser-based Mining}
 
 \subsubsection{Early days}
-The idea of in-browser mining started on early days of Bitcoin in 2011, with Bitcoin Plus\footnote{Bitcoin For the Uninitiated: Now, A Browser-Based Mining Client  May 19th, 2011\url{https://www.themarysue.com/browser-based-bitcoin-mining/}} which resulted in more discussions on replacing ads with Bitcoin browser miners\footnote{BitCoin browser mining as a replacement for ads \url{https://www.reddit.com/r/Bitcoin/comments/ieaew/bitcoin_browser_mining_as_a_replacement_for_ads/}}. This allows for more scalability as there is no need to install any additional software on a computer with an internet connection. Soon after there was a rise in Bitcoin JavaScript miners such as JSMiner\footnote{A JavaScript Bitcoin miner \url{https://github.com/jwhitehorn/jsMiner}}(2011) and MineCrunch\footnote{Minecrunch, web(JS) miner with integration feature\url{https://cryptocurrencytalk.com/topic/24618-minecrunch-web-js-miner-with-integration-feature/}}(2014). MineCrunch was the more successful of the two since it had a more publicity successful campaign, and its developers maintained an active online presence. Based on the developer claims, the JavaScript miner was well optimized, but worked 1.5x slower than native applications for CPU mining such as CPUMiner\footnote{CPU miner for Litecoin and Bitcoin - \url{https://github.com/pooler/cpuminer}}. Although CPU mining was not profitable, it became a safe haven for botnet admins to experiment on the thousands of CPUs. Turning access to money, which resulted in many mining malwares (botnets) on personal computers~\cite{huang2014botcoin}~\cite{wyke2012zeroaccess}, enterprise and clouds~\cite{MiningonSOeDime2017}.
+The idea of in-browser mining started in the early days of Bitcoin in 2011, with Bitcoin Plus\footnote{Bitcoin For the Uninitiated: Now, A Browser-Based Mining Client  May 19th, 2011\url{https://www.themarysue.com/browser-based-bitcoin-mining/}} which resulted in more discussions on replacing ads with Bitcoin browser miners\footnote{BitCoin browser mining as a replacement for ads \url{https://www.reddit.com/r/Bitcoin/comments/ieaew/bitcoin_browser_mining_as_a_replacement_for_ads/}}. This allows for more scalability as there is no need to install any additional software on a computer with an internet connection. Soon after there was a rise in Bitcoin JavaScript miners such as JSMiner\footnote{A JavaScript Bitcoin miner \url{https://github.com/jwhitehorn/jsMiner}}(2011) and MineCrunch\footnote{Minecrunch, web(JS) miner with integration feature\url{https://cryptocurrencytalk.com/topic/24618-minecrunch-web-js-miner-with-integration-feature/}}(2014). MineCrunch was the more successful of the two since it had a more publicity successful campaign, and its developers maintained an active online presence. Based on the developer claims, the JavaScript miner was well optimized, but worked 1.5x slower than native applications for CPU mining such as CPUMiner\footnote{CPU miner for Litecoin and Bitcoin - \url{https://github.com/pooler/cpuminer}}. Although CPU mining was not profitable, it became a safe haven for botnet admins to experiment on the thousands of CPUs. Turning access to money, which resulted in many mining malwares (botnets) on personal computers~\cite{huang2014botcoin}~\cite{wyke2012zeroaccess}, enterprise and clouds~\cite{MiningonSOeDime2017}.
 
 \subsubsection{From one CPU to ASICS and Mining pools}
 In early days of Bitcoin mining, the mining softwares used CPU resources to run the mining algorithm. The first block mined on a GPU happened on July 18th, 2010 by a user named ArtForz\footnote{bitcoinhistory} using private mining code that he wrote himself, however it was until mid 2011 that others started implementing and releasing mining softwares for GPUs to facilitate the mining efficiency using more powerful GPUs which resulted in parallelizing multiple GPUs for more hashing power, also known as Mining rigs. It wasn't long after that people started working on FPGA mining hardwares for even more hashing power\footnote{Custom FPGA Board for Sale! (August 18, 2011) \url{https://bitcointalk.org/index.php?topic=37904.0}}. In mid 2012, a few companies started selling specifically designed hardware for much faster and more efficient Bitcoin mining called ``ASICs``, Application-Specific Integrated Circuits. It took almost a year for these companies to deliver their products, however introduction of ASICs made mining harder for normal users with GPUs.
