--- a/Paper/sections/body.tex
+++ b/Paper/sections/body.tex
@@ -32,12 +32,14 @@ This paper tells the story behind the rejuvenation of browser-based mining. It i
 \subsection{Browser-based Mining}
 
 \subsubsection{Early days}
-The idea of in-browser mining started in the early days of Bitcoin in 2011, with Bitcoin Plus\footnote{Bitcoin For the Uninitiated: Now, A Browser-Based Mining Client  May 19th, 2011\url{https://www.themarysue.com/browser-based-bitcoin-mining/}} which resulted in more discussions on replacing ads with Bitcoin browser miners\footnote{BitCoin browser mining as a replacement for ads \url{https://www.reddit.com/r/Bitcoin/comments/ieaew/bitcoin_browser_mining_as_a_replacement_for_ads/}}. This allows for more scalability as there is no need to install any additional software on a computer with an internet connection. Soon after there was a rise in Bitcoin JavaScript miners such as JSMiner\footnote{A JavaScript Bitcoin miner \url{https://github.com/jwhitehorn/jsMiner}}(2011) and MineCrunch\footnote{Minecrunch, web(JS) miner with integration feature\url{https://cryptocurrencytalk.com/topic/24618-minecrunch-web-js-miner-with-integration-feature/}}(2014). MineCrunch was the more successful of the two since it had a more publicity successful campaign, and its developers maintained an active online presence. Based on the developer claims, the JavaScript miner was well optimized, but worked 1.5x slower than native applications for CPU mining such as CPUMiner\footnote{CPU miner for Litecoin and Bitcoin - \url{https://github.com/pooler/cpuminer}}. Although CPU mining was not profitable, it became a safe haven for botnet admins to experiment on the thousands of CPUs. Turning access to money, which resulted in many mining malwares (botnets) on personal computers~\cite{huang2014botcoin}~\cite{wyke2012zeroaccess}, enterprise and clouds~\cite{MiningonSOeDime2017}.
+The idea of in-browser mining started in the early days of Bitcoin. Bitcoin Plus\footnote{Bitcoin For the Uninitiated: Now, A Browser-Based Mining Client  May 19th, 2011\url{https://www.themarysue.com/browser-based-bitcoin-mining/}} is one example of a discussion on replacing ads with Bitcoin browser miners.\footnote{BitCoin browser mining as a replacement for ads \url{https://www.reddit.com/r/Bitcoin/comments/ieaew/bitcoin_browser_mining_as_a_replacement_for_ads/}} It was also argued that browser-based mining provides greater scalability and decentralization as the barrier to entry is lowered to any unmodified computer with an internet connection. Soon after there was a rise in Bitcoin JavaScript miners such as JSMiner (2011)\footnote{A JavaScript Bitcoin miner \url{https://github.com/jwhitehorn/jsMiner}} and MineCrunch (2014).\footnote{Minecrunch, web(JS) miner with integration feature\url{https://cryptocurrencytalk.com/topic/24618-minecrunch-web-js-miner-with-integration-feature/}} MineCrunch's visibility was increased by campaigns and the active online presence of its developers. Based on the developer claims, Minecrunch was well optimized for Javascript but still worked 1.5x slower than native applications for CPU mining (\eg CPUMiner\footnote{CPU miner for Litecoin and Bitcoin - \url{https://github.com/pooler/cpuminer}}). Although CPU mining  became uncompetitive with GPU- and ASIC-based mining, it remained a sandbox for botnet admins to experiment with the thousands of CPUs at their disposal. Mining malwares (via botnets) on personal computers has been studied in the literature~\cite{huang2014botcoin,wyke2012zeroaccess}, as well as cover mining within enterprises and cloud environments~\cite{MiningonSOeDime2017}.
 
-\subsubsection{From one CPU to ASICS and Mining pools}
-In early days of Bitcoin mining, the mining softwares used CPU resources to run the mining algorithm. The first block mined on a GPU happened on July 18th, 2010 by a user named ArtForz\footnote{bitcoinhistory} using private mining code that he wrote himself, however it was until mid 2011 that others started implementing and releasing mining softwares for GPUs to facilitate the mining efficiency using more powerful GPUs which resulted in parallelizing multiple GPUs for more hashing power, also known as Mining rigs. It wasn't long after that people started working on FPGA mining hardwares for even more hashing power\footnote{Custom FPGA Board for Sale! (August 18, 2011) \url{https://bitcointalk.org/index.php?topic=37904.0}}. In mid 2012, a few companies started selling specifically designed hardware for much faster and more efficient Bitcoin mining called ``ASICs``, Application-Specific Integrated Circuits. It took almost a year for these companies to deliver their products, however introduction of ASICs made mining harder for normal users with GPUs.
 
-Consequently, the hashing power of the Bitcoin network increased so did the mining difficulty. A desktop PC CPU mining at 10 MH/s can expect to mine 425 years before finding a  block and earning the bitcoin reward ~\cite{huang2014botcoin}. The approach to make mining profitable for users, was to join in mining pools. Mining pools are servers dedicated to splitting the mining work between the participants and parallelizing the search for the winning block. Upon finding a block by the mining pool, the participant is paid in proportion to her hashing power dedicated to that mining pool. The first Bitcoin block found on a mining pool was on December 16, 2010 which was a beta implementation of a pool operated by a user named \textit{slush}.
+\subsubsection{From one CPU to ASICS and mining pools}
+
+The first Bitcoin block mined on a GPU happened on July 18th, 2010 by a user named ArtForz\footnote{bitcoinhistory} using private mining code that he wrote himself. It was not until mid 2011 that others started implementing and releasing open source GPU-based mining tools. These tools greatly increased mining efficiency due to the hashing power of a GPU and the massive parallelizing possible with multiple GPUs (also known as mining rigs). The move from software to hardware following shortly after. First, programmable FPGA chips resulting in custom-built circuits specifically for mining.\footnote{Custom FPGA Board for Sale! (August 18, 2011) \url{https://bitcointalk.org/index.php?topic=37904.0}} Then by mid 2012, companies started selling ASICs designed specifically for Bitcoin mining. After about a delay of a year in delivering ASIC products, Bitcoin mining starting transitioning from GPUs to ASICs where it remains today. Consequently, the hashing power of the Bitcoin network increased and the mining difficulty followed. To illustrate the change, consider a desktop PC CPU mining at 10 MH/s: on expectation, it will take 425 years before mining a block~\cite{huang2014botcoin}. 
+
+In parallel to the evolving technology, collective action emerged through the use of mining pools. A mining pool is a collective of individual miners. Participants receive a slice of work for mining the current block on behalf of the pool. If a member of the pool mines the block, the block reward is split amongst the participants of the pool \textit{pro rata} according to their computational effort. As an aside, a very elegant protocol for reporting `near-solutions' to the pool enables participants to prove, without trust, the level of effort they are contributing to the pool at all times. In general, a mining pools cannot amplify earnings, they just changes their shape. An income stream from a pool is a steady trickle, while solo-mining results in sporadic dumps of income. The first Bitcoin block found on a mining pool was on December 16, 2010 which was a beta implementation of a pool operated by a user named \textit{slush}.
 
 \subsection{Monero}
 
