--- a/Paper/sections/timeline.tex
+++ b/Paper/sections/timeline.tex
@@ -4,7 +4,6 @@
 \parbox[b]{8em}{\hfill{\color{cyan}\bfseries\sffamily #1}~$\cdots$~}\makebox[0pt][c]{$\bullet$}\vrule\quad \parbox[c]{4.5cm}{\vspace{7pt}\color{red!40!black!80}\raggedright\sffamily #2.\\[7pt]}\\[-2pt]}
 
 \begin{table}
-\caption{Timeline of Monero and in-browser mining.}
 \centering
 \begin{minipage}[t]{.7\linewidth}
 \color{gray}
@@ -22,4 +21,5 @@
 \bigskip
 \rule{\linewidth}{1pt}%
 \end{minipage}%
+\caption{Timeline of Monero and in-browser mining.\label{tab:timeline}}
 \end{table}
